--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <script src="https://unpkg.com/vue"></script>
     <script src="https://unpkg.com/vue-material"></script>
 
-    <script type="text/javascript" src="js/qr-scanner.min.js"></script>
-    <script type="text/javascript" src="js/qr-scanner-worker.min.js"></script>
+
+    <script type="text/javascript" src="js/instascan.min.js"></script>
+
 
     <script type="text/javascript" src="js/paper-full.min.js"></script>
     <script type="text/javascript">
@@ -55,6 +56,18 @@
       <div style="width:50%;margin:auto">
           <md-dialog :md-active.sync="working" :md-close-on-esc="false" :md-click-outside-to-close="false" ><md-dialog-title>Working...</md-dialog-title></md-dialog>
 
+          <!-- User Registration -->
+          <md-card :hidden="participant_data.id != null">
+              <md-card-header>
+                  <div class="md-title">Please Scan Your Participant Code</div>
+                  <hr>
+              </md-card-header>
+              <md-card-content>
+                <center><video id="qr-scan-video" ref="qrScanVideo" autoplay="true"></video></center>
+              </md-card-content>
+          </md-card>
+
+          <!-- Likert and TLX forms -->
           <md-card :hidden="curr_survey.type != 'likert' && curr_survey.type != 'tlx' && curr_survey.type != 'tlxranking'" style="overflow:hidden">
               <md-card-header v-if="Object.keys(curr_survey).length">
                 <div class="md-toolbar" :md-elevation="1" v-if="curr_survey.subtitle"><span class="md-title">{{curr_survey.subtitle}}</span></div>
@@ -73,6 +86,7 @@
               </md-card-actions>
           </md-card>
 
+          <!-- Free-form comment form -->
           <md-card v-if="curr_survey.type && curr_survey.type == 'comments'">
             <md-card-header v-if="Object.keys(curr_survey).length">
               <div class="md-title">{{curr_survey.title}}</div>
@@ -85,6 +99,8 @@
               <md-button class="md-raised md-primary" v-on:click="nextSurvey()" >Finish <md-icon>arrow_forward</md-icon></md-button>
             </md-card-actions>
           </md-card>
+
+          <!-- Message/Instruction page -->
           <md-card v-if="curr_survey.type && curr_survey.type == 'message'">
             <md-card-header>
                 <div class="md-title">{{curr_survey.title}}</div>
@@ -96,6 +112,7 @@
             </md-card-actions>
           </md-card>
 
+          <!-- User Input Form Fields -->
           <md-card v-if="curr_survey.type && curr_survey.type == 'formdata'">
               <md-card-header v-if="Object.keys(curr_survey).length">
                 <div class="md-title">{{curr_survey.title}}</div>
@@ -264,9 +281,6 @@
         formfields: [],
         visualizations: {},
         surveyOrder: [
-            {
-                name: 'nasa_tlx_ranking_en'
-            },
             {
                 name: 'vitaldata_en'
             },
@@ -565,57 +579,67 @@
                     vm.$set(vm, 'curr_question', 0)
                     forceResize();
 
-                    setTimeout(() => {
                     if (res.survey.type == 'likert')
                     {
-                        
-                        var scenario = -1;
-                        if (vm.participant_data.surveys.length > 0)
-                            scenario = vm.participant_data.surveys[vm.participant_data.surveys.length-1].scenario === 1 ? 2 : 1;
-                        else
-                            scenario = vm.participant_data.group == "A" ? 1 : 2;
+                        setTimeout(() => {
+                            var scenario = -1;
+                            if (vm.participant_data.surveys.length > 0)
+                                scenario = vm.participant_data.surveys[vm.participant_data.surveys.length-1].scenario === 1 ? 2 : 1;
+                            else
+                                scenario = vm.participant_data.group == "A" ? 1 : 2;
 
-                        vm.participant_data.surveys.push({ 
-                            scenario: scenario,
-                            answers: []
-                        });
-                        vm.drawLikert(this.paperscope, function(v) { 
-                            console.log(vm.curr_question, v);
-                            vm.$refs.nextBtn.disabled = false;
-                            vm.participant_data.surveys[vm.participant_data.surveys.length-1].answers[vm.curr_question] = v;
-                        });
+                            vm.participant_data.surveys.push({ 
+                                scenario: scenario,
+                                answers: []
+                            });
+                            vm.drawLikert(this.paperscope, function(v) { 
+                                console.log(vm.curr_question, v);
+                                vm.$refs.nextBtn.disabled = false;
+                                vm.participant_data.surveys[vm.participant_data.surveys.length-1].answers[vm.curr_question] = v;
+                            });
+
+                            vm.working = false;
+                        }, 100);
                     }
                     else if (res.survey.type == 'tlx')
                     {
-                        var scenario = -1;
-                        if (vm.participant_data.TLX.surveys.length > 0)
-                            scenario = vm.participant_data.TLX.surveys[vm.participant_data.TLX.surveys.length-1].scenario === 1 ? 2 : 1;
-                        else
-                            scenario = vm.participant_data.group == "A" ? 1 : 2;
+                        setTimeout(() => {
+                            var scenario = -1;
+                            if (vm.participant_data.TLX.surveys.length > 0)
+                                scenario = vm.participant_data.TLX.surveys[vm.participant_data.TLX.surveys.length-1].scenario === 1 ? 2 : 1;
+                            else
+                                scenario = vm.participant_data.group == "A" ? 1 : 2;
 
-                        vm.participant_data.TLX.surveys.push({
-                            scenario: scenario,
-                            answers: {}
-                        });
+                            vm.participant_data.TLX.surveys.push({
+                                scenario: scenario,
+                                answers: {}
+                            });
 
-                        forceResize();
-                        vm.drawTLX(this.paperscope, function(v) {
-                            console.log(vm.curr_question, v);
-                            vm.$refs.nextBtn.disabled = false;
-                            vm.participant_data.TLX.surveys[vm.participant_data.TLX.surveys.length-1].answers[vm.curr_survey.scales[vm.curr_question].title.toLowerCase()] = v;
-                        });
+                            forceResize();
+                            vm.drawTLX(this.paperscope, function(v) {
+                                console.log(vm.curr_question, v);
+                                vm.$refs.nextBtn.disabled = false;
+                                vm.participant_data.TLX.surveys[vm.participant_data.TLX.surveys.length-1].answers[vm.curr_survey.scales[vm.curr_question].title.toLowerCase()] = v;
+                            });
+
+                            vm.working = false;
+                        }, 100);
                     }
                     else if (res.survey.type == 'tlxranking')
                     {
-                        forceResize();
-                        vm.drawTLXRanking(this.paperscope, function(v) {
-                            console.log(vm.curr_question, v.toLowerCase());
-                            vm.$refs.nextBtn.disabled = false;
-                            vm.participant_data.TLX.rankings[vm.curr_question] = v.toLowerCase();
-                        });
+                        setTimeout(() => {
+                            forceResize();
+                            vm.drawTLXRanking(this.paperscope, function(v) {
+                                console.log(vm.curr_question, v.toLowerCase());
+                                vm.$refs.nextBtn.disabled = false;
+                                vm.participant_data.TLX.rankings[vm.curr_question] = v.toLowerCase();
+                            });
+                            vm.working = false;
+                        }, 100);
                     }
                     else if (res.survey.type == 'formdata')
                     {
+                        console.log("Loading form data:", res.survey);
                         var requiredFields = [];
                         vm.formfields = {
                             ready: function() {
@@ -649,9 +673,12 @@
                                 vm.formfields.fields.push(SelectionField(field.name, field.field, field.notes, field.options));
                         });
                         forceResize();
+                        vm.working = false;
                     }
-                    vm.working = false;
-                  }, 100);
+                    else
+                    {
+                        vm.working = false;
+                    }
                 }
                 else
                 {
@@ -720,11 +747,53 @@
         },
         mounted: function() {
           console.log('Vue mounted', this.$refs);
-          this.paperscope = initCanvas(this.$refs.surveyCanvas); //'survey-canvas');
-          postData('$new_user', null, function(uid) { vm.participant_data.id = uid.id; vm.participant_data.group = uid.group; });
-          this.loadSurvey(this.surveyOrder[0].name, function(q, a) {
+          this.paperscope = initCanvas(this.$refs.surveyCanvas);
+
+          let video = document.querySelector('#qr-scan-video');
+          if (navigator.mediaDevices.getUserMedia) {
+              navigator.mediaDevices.getUserMedia({ video: true }).then( (stream) => video.srcObject = stream ).catch( (err) => console.log('Video Error:', err));
+          }
+
+          let scanner = new Instascan.Scanner({video: this.$refs.qrScanVideo });
+          scanner.addListener('scan', (result) => {
+            console.log('decoded qr code:', result);
+            let json = JSON.parse(result);
+            vm.participant_data.id = json.id;
+            vm.participant_data.group = json.group;
+
+            scanner.stop();
+            scanner = null;
+
+            postData('$register_user', '{"id": "' + json.id + '", "group": "' + json.group + '"}', (res) => console.log(res));
+            this.loadSurvey(this.surveyOrder[0].name, function(q, a) {
+             console.log(q, a);
+            });
+          });
+          Instascan.Camera.getCameras().then((cameras) => {
+              if (cameras.length > 0) {
+                  scanner.start(cameras[0]);
+              } else {
+                  console.log("No cameras?");
+              }
+          })
+/*
+          const qrScanner = new QrScanner(this.$refs.qrScanVideo, result => {
+            console.log('decoded qr code:', result);
+            let json = JSON.parse(result);
+            vm.participant_data.id = json.id;
+            vm.participant_data.group = json.group;
+
+            this.loadSurvey(this.surveyOrder[0].name, function(q, a) {
              console.log(q, a);
            });
+          });
+*/
+
+          // request new user id and group from server
+//          postData('$new_user', null, function(uid) { vm.participant_data.id = uid.id; vm.participant_data.group = uid.group; });
+        //   this.loadSurvey(this.surveyOrder[0].name, function(q, a) {
+        //      console.log(q, a);
+        //    });
         }
       });
 
